# dataspine

./: .gitignore  DATASPINE_CURSOR_EXECUTABLE.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: .env.example
docs/: README.md  canonical_schemas.md  contracts.md  invariants.md  source_registry.md
infra/: Dockerfile  docker-compose.yml
scripts/: pre-commit-hook.sh  run_pipeline.py  setup-hooks.sh  smoketest.sh  verify_p01.sh
src/dataspine/: __init__.py  config.py  logging_config.py
src/dataspine/adapters/: __init__.py
src/dataspine/audit/: __init__.py
src/dataspine/detection/: __init__.py
src/dataspine/normalization/: __init__.py
src/dataspine/reconciliation/: __init__.py
src/dataspine/scheduling/: __init__.py
src/dataspine/schemas/: __init__.py  market_data.py  trade_data.py
src/dataspine/validation/: __init__.py  contracts.py  invariants.py
tests/: __init__.py  conftest.py  test_contracts.py  test_schemas.py
